[package]
name = "rockstar"
description = "lua scripting tool that gives you social anxiety"
authors = ["NotNite <hi@notnite.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
captrs = "0.3.1"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
mlua = { version = "0.8.6", features = ["lua54", "serialize", "send", "async"] }
rdev = { version = "0.5.2", features = ["serialize"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_variant = "0.1.1"
tokio = { version = "1.23.0", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_System_Console"]}
